; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_xhci-ring.c_handle_stopped_cmd_ring.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_xhci-ring.c_handle_stopped_cmd_ring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xhci_hcd = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i64, i64 }

@COMP_CMD_ABORT = common dso_local global i32 0, align 4
@CMD_RING_STATE_STOPPED = common dso_local global i32 0, align 4
@COMP_CMD_STOP = common dso_local global i32 0, align 4
@CMD_RING_STATE_RUNNING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xhci_hcd*, i32)* @handle_stopped_cmd_ring to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_stopped_cmd_ring(%struct.xhci_hcd* %0, i32 %1) #0 {
  %3 = alloca %struct.xhci_hcd*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.xhci_hcd* %0, %struct.xhci_hcd** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load %struct.xhci_hcd*, %struct.xhci_hcd** %3, align 8
  %7 = load %struct.xhci_hcd*, %struct.xhci_hcd** %3, align 8
  %8 = getelementptr inbounds %struct.xhci_hcd, %struct.xhci_hcd* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = call i32 @xhci_search_cmd_trb_in_cd_list(%struct.xhci_hcd* %6, i64 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @COMP_CMD_ABORT, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %2
  %17 = load i32, i32* @CMD_RING_STATE_STOPPED, align 4
  %18 = load %struct.xhci_hcd*, %struct.xhci_hcd** %3, align 8
  %19 = getelementptr inbounds %struct.xhci_hcd, %struct.xhci_hcd* %18, i32 0, i32 1
  store i32 %17, i32* %19, align 8
  br label %46

20:                                               ; preds = %2
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* @COMP_CMD_STOP, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %45

24:                                               ; preds = %20
  %25 = load %struct.xhci_hcd*, %struct.xhci_hcd** %3, align 8
  %26 = call i32 @xhci_cancel_cmd_in_cd_list(%struct.xhci_hcd* %25)
  %27 = load i32, i32* @CMD_RING_STATE_RUNNING, align 4
  %28 = load %struct.xhci_hcd*, %struct.xhci_hcd** %3, align 8
  %29 = getelementptr inbounds %struct.xhci_hcd, %struct.xhci_hcd* %28, i32 0, i32 1
  store i32 %27, i32* %29, align 8
  %30 = load %struct.xhci_hcd*, %struct.xhci_hcd** %3, align 8
  %31 = getelementptr inbounds %struct.xhci_hcd, %struct.xhci_hcd* %30, i32 0, i32 0
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = load %struct.xhci_hcd*, %struct.xhci_hcd** %3, align 8
  %36 = getelementptr inbounds %struct.xhci_hcd, %struct.xhci_hcd* %35, i32 0, i32 0
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 1
  %39 = load i64, i64* %38, align 8
  %40 = icmp ne i64 %34, %39
  br i1 %40, label %41, label %44

41:                                               ; preds = %24
  %42 = load %struct.xhci_hcd*, %struct.xhci_hcd** %3, align 8
  %43 = call i32 @xhci_ring_cmd_db(%struct.xhci_hcd* %42)
  br label %44

44:                                               ; preds = %41, %24
  br label %45

45:                                               ; preds = %44, %20
  br label %46

46:                                               ; preds = %45, %16
  %47 = load i32, i32* %5, align 4
  ret i32 %47
}

declare dso_local i32 @xhci_search_cmd_trb_in_cd_list(%struct.xhci_hcd*, i64) #1

declare dso_local i32 @xhci_cancel_cmd_in_cd_list(%struct.xhci_hcd*) #1

declare dso_local i32 @xhci_ring_cmd_db(%struct.xhci_hcd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
